# cyrene

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.toml  install.ps1  install.sh  rust-toolchain.toml  rustfmt.toml
.claude/: skills.md
.cursor/rules/: cyrene.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  sync-marketplace-templates.yml
crates/cyrene-acp/: Cargo.toml
crates/cyrene-acp/src/: adapter.rs  jsonrpc.rs  lib.rs
crates/cyrene-bridge/: Cargo.toml
crates/cyrene-bridge/src/: boundary.rs  bridge.rs  error.rs  lib.rs
crates/cyrene-channels/: Cargo.toml
crates/cyrene-channels/src/: auth.rs  channels.rs  gateway.rs  lib.rs  session_store.rs  testing.rs
crates/cyrene-cli/: Cargo.toml
crates/cyrene-cli/src/: actions.rs  agent.rs  chatmem.rs  crons.rs  main.rs  persona.rs  prompt.rs  pyexec.rs  service.rs  slash.rs  telegram.rs  update.rs  whatsapp.rs
crates/cyrene-cli/tests/: e2e_smoke.rs
crates/cyrene-compress/: Cargo.toml
crates/cyrene-compress/src/: lib.rs
crates/cyrene-compress/tests/: compress_properties.proptest-regressions  compress_properties.rs
crates/cyrene-config/: Cargo.toml
crates/cyrene-config/src/: autonomy.rs  config.rs  error.rs  execution.rs  extension_loader.rs  lib.rs  registry.rs  secrets.rs
crates/cyrene-config/tests/: load_from_file.rs
crates/cyrene-core/: Cargo.toml
crates/cyrene-core/src/: budget.rs  channel.rs  error.rs  ids.rs  lib.rs  memory.rs  model.rs  money.rs  plan.rs  risk.rs  session.rs
crates/cyrene-dashboard/: Cargo.toml
crates/cyrene-dashboard/src/: auth.rs  channel.rs  lib.rs  views.rs
crates/cyrene-dashboard/tests/: dashboard_flow.rs
crates/cyrene-events/: Cargo.toml
crates/cyrene-events/src/: cron.rs  heartbeat.rs  lib.rs  webhook.rs
crates/cyrene-hardware/: Cargo.toml
crates/cyrene-hardware/src/: discovery.rs  error.rs  lib.rs  peripheral.rs
crates/cyrene-hub/: Cargo.toml
crates/cyrene-hub/src/: client.rs  lib.rs  package.rs
crates/cyrene-ledger/: Cargo.toml
crates/cyrene-ledger/src/: error.rs  keypair.rs  ledger.rs  lib.rs  receipt.rs  verify.rs
crates/cyrene-ledger/tests/: ledger_properties.rs
crates/cyrene-memory/: Cargo.toml
crates/cyrene-memory/src/: authz.rs  guard.rs  lib.rs  redis.rs
crates/cyrene-memory/tests/: redis_swap.rs  trait_swap.rs
crates/cyrene-models/: Cargo.toml
crates/cyrene-models/src/: budget_guard.rs  lib.rs  router.rs
crates/cyrene-models/src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  openrouter.rs  presets.rs
crates/cyrene-models/tests/: model_properties.rs
crates/cyrene-presence/: Cargo.toml
crates/cyrene-presence/src/: lib.rs  persona.rs  presence.rs
crates/cyrene-render/: Cargo.toml
crates/cyrene-render/src/: diagram.rs  lib.rs  render.rs
crates/cyrene-runtime/: Cargo.toml
crates/cyrene-runtime/src/: agent_loop.rs  daemon.rs  error.rs  lib.rs  service.rs  supervisor.rs
crates/cyrene-runtime/tests/: runtime_targets.rs  safety_pipeline.rs
crates/cyrene-safety/: Cargo.toml
crates/cyrene-safety/src/: approval_gate.rs  autonomy.rs  execution.rs  injection_scanner.rs  lib.rs  shadow_executor.rs
crates/cyrene-safety/src/sandbox/: confinement.rs  error.rs  mod.rs
crates/cyrene-safety/tests/: injection_properties.rs  shadow_properties.rs
crates/cyrene-sdk/: Cargo.toml
crates/cyrene-sdk/src/: error.rs  host_api.rs  lib.rs  manifest.rs
crates/cyrene-sdk/tests/: manifest_validation.rs
crates/cyrene-skills/: Cargo.toml
crates/cyrene-skills/src/: bundle.rs  engine.rs  error.rs  lib.rs  library.rs  skill.rs
crates/cyrene-state/: Cargo.toml
crates/cyrene-state/src/: checkpoint.rs  error.rs  lib.rs  store.rs
crates/cyrene-state/tests/: state_properties.rs
crates/cyrene-tools/: Cargo.toml
crates/cyrene-tools/src/: builtins.rs  error.rs  lib.rs  mcp.rs  tool.rs
crates/cyrene-tools/src/integrations/: marketplace.rs  mod.rs  shopify.rs  stt.rs  twitch.rs  wallet.rs  youtube.rs
crates/cyrene-trajectory/: Cargo.toml
crates/cyrene-trajectory/src/: lib.rs
crates/cyrene-trajectory/tests/: trajectory_properties.rs
docker/: Dockerfile  docker-compose.yml
docs/: README.md  architecture.md  configuration.md  deployment.md  installation.md  security.md
firmware/: README.md
firmware/esp32/: CMakeLists.txt  sdkconfig.defaults
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_config.rs  fuzz_json_payload.rs  fuzz_skill_parse.rs  fuzz_tool_params.rs
marketplace/coolify/: docker-compose.yml
marketplace/dokploy/: docker-compose.yml
marketplace/easypanel/: docker-compose.yml
nix/: flake.nix  module.nix
npm/: .npmignore  README.md  package.json
npm/lib/: install.js  platform.js
optional-mcps/git-integration/: cyrene.plugin.toml
optional-mcps/web-scraper/: cyrene.plugin.toml
optional-skills/advanced-devops/: kubernetes-advanced.md  multi-cloud.md
optional-skills/data-engineering/: airflow-orchestrate.md  spark-pipeline.md
optional-skills/education/: lesson-plan.md
optional-skills/gaming/: game-logic.md
optional-skills/healthcare/: symptom-analyze.md
optional-skills/legal/: contract-review.md
packaging/homebrew/: cyrene-agent.rb  cyrene.rb
scripts/: generate-skills.py  install.sh  release.sh  validate-skills.py
skills/ai-ml/: agent-design.md  bias-detect.md  chatbot-build.md  data-label.md  embedding-generate.md  fine-tune-guide.md  image-prompt.md  llm-evaluate.md  ml-pipeline.md  model-deploy.md  prompt-engineer.md  rag-build.md
skills/communication/: announcement-draft.md  conflict-resolve.md  documentation-write.md  feedback-give.md  interview-prepare.md  negotiation-prepare.md  proposal-write.md  report-write.md  slack-message.md  speech-write.md  status-update.md  translation-assist.md
skills/creative/: ad-copy-write.md  brainstorm-ideas.md  content-repurpose.md  email-draft.md  generate-names.md  logo-concept.md  music-lyrics.md  presentation-create.md  recipe-create.md  write-poem.md  (+2 more)
(+186 files in other folders)
