[package]
name = "cyrene-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Stand alone as its own workspace so the fuzz crate is not pulled into the
# parent `crates/*` workspace (cargo-fuzz drives it directly).
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
cyrene-config = { path = "../crates/cyrene-config" }
cyrene-core = { path = "../crates/cyrene-core" }
cyrene-skills = { path = "../crates/cyrene-skills" }
cyrene-tools = { path = "../crates/cyrene-tools" }
serde_json = "1"

# Each fuzz target is declared as a binary so `cargo fuzz run <target>` and
# `cargo fuzz list` can discover it. `test`/`doc` are disabled because these
# harnesses are only meaningful under the libFuzzer runtime.
[[bin]]
name = "fuzz_config"
path = "fuzz_targets/fuzz_config.rs"
test = false
doc = false

[[bin]]
name = "fuzz_tool_params"
path = "fuzz_targets/fuzz_tool_params.rs"
test = false
doc = false

[[bin]]
name = "fuzz_json_payload"
path = "fuzz_targets/fuzz_json_payload.rs"
test = false
doc = false

[[bin]]
name = "fuzz_skill_parse"
path = "fuzz_targets/fuzz_skill_parse.rs"
test = false
doc = false
