[package]
name = "cyrene-acp"
description = "The ACP_Adapter exposing the Agent_Loop to editors over JSON-RPC."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
