[package]
name = "cyrene-bridge"
description = "The Workspace_Bridge connecting browser, terminal, and cloud repositories for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
