[package]
name = "cyrene-cli"
description = "The Cyrene command-line interface and onboarding binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "cyrene"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
cyrene-core = { path = "../cyrene-core" }
cyrene-config = { path = "../cyrene-config" }
cyrene-sdk = { path = "../cyrene-sdk" }
clap = { version = "~4.4", features = ["derive"] }
dialoguer = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
