[package]
name = "cyrene-cli"
description = "The Cyrene command-line interface and onboarding binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "cyrene"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
cyrene-core = { path = "../cyrene-core" }
cyrene-config = { path = "../cyrene-config" }
cyrene-sdk = { path = "../cyrene-sdk" }
clap = { version = "~4.4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["password"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
semver = "1"

[dev-dependencies]
# The end-to-end smoke test (task 23.3) drives the onboarded runtime: it builds
# the Agent_Loop from the same safety/audit substrates the daemon wires up, runs
# a CLI request, and asserts a signed receipt and a checkpoint were recorded.
cyrene-runtime = { path = "../cyrene-runtime" }
cyrene-ledger = { path = "../cyrene-ledger" }
cyrene-state = { path = "../cyrene-state" }
cyrene-safety = { path = "../cyrene-safety" }
tempfile = { workspace = true }
