[package]
name = "cyrene-compress"
description = "RTK-style tool-output compression for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
