[package]
name = "cyrene-config"
description = "TOML configuration loading and the plugin registry for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
cyrene-core = { path = "../cyrene-core" }
serde = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Used only by registry unit tests to implement the async Channel/Memory/Model
# traits with small fakes; the registry itself never awaits trait methods.
async-trait = { workspace = true }
