[package]
name = "cyrene-config"
description = "TOML configuration loading and the plugin registry for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
cyrene-core = { path = "../cyrene-core" }
cyrene-sdk = { path = "../cyrene-sdk" }
serde = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
