[package]
name = "cyrene-hardware"
description = "Hardware and peripheral control for Cyrene (GPIO/I2C/SPI/serial)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[features]
default = []
gpio = []
i2c = []
spi = []
serial = []
all-hardware = ["gpio", "i2c", "spi", "serial"]

[dependencies]
cyrene-core = { path = "../cyrene-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
