[package]
name = "cyrene-ledger"
description = "The signed, append-only, hash-chained Receipt_Ledger for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
