[package]
name = "cyrene-memory"
description = "The Memory trait and SQLite-backed Memory_Graph for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
