[package]
name = "cyrene-memory"
description = "The Memory trait and SQLite-backed Memory_Graph for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[features]
# Off by default: SQLite is the only built-in backend unless a user explicitly
# opts in to Redis. Enabling this feature compiles the `RedisMemory` backend and
# pulls in the async Redis driver. The backend is still only *used* when the
# user declares a `[memory.redis.<alias>]` entry in their config.
redis = ["dep:redis", "dep:tokio"]

[dependencies]
cyrene-core = { path = "../cyrene-core" }
cyrene-safety = { path = "../cyrene-safety" }
rusqlite = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
cyrene-config = { path = "../cyrene-config" }
async-trait = { workspace = true }
