[package]
name = "cyrene-models"
description = "The Model trait, Model_Router escalation, Budget_Guard, and provider integrations for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
cyrene-core = { path = "../cyrene-core" }
cyrene-config = { path = "../cyrene-config" }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
