[package]
name = "cyrene-presence"
description = "The Presence_Engine and Persona_Engine for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
