[package]
name = "cyrene-render"
description = "The Report_Renderer producing PDF and interactive HTML output for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
