[package]
name = "cyrene-runtime"
description = "The Tokio daemon, supervisor, and crash-restore runtime for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
cyrene-core = { path = "../cyrene-core" }
cyrene-ledger = { path = "../cyrene-ledger" }
cyrene-state = { path = "../cyrene-state" }
cyrene-safety = { path = "../cyrene-safety" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
cyrene-config = { path = "../cyrene-config" }
