[package]
name = "cyrene-safety"
description = "The safety pipeline: Sandbox, Shadow_Executor, Approval_Gate, Injection_Scanner, and autonomy policy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
