[package]
name = "cyrene-safety"
description = "The safety pipeline: Sandbox, Shadow_Executor, Approval_Gate, Injection_Scanner, and autonomy policy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
cyrene-core = { path = "../cyrene-core" }
cyrene-config = { path = "../cyrene-config" }
thiserror.workspace = true
tempfile.workspace = true
tracing = "0.1"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
proptest.workspace = true
