[package]
name = "cyrene-sdk"
description = "The Extension SDK: public traits and host API for Cyrene extensions."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
cyrene-core = { path = "../cyrene-core" }
cyrene-tools = { path = "../cyrene-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
semver = "1"
