[package]
name = "cyrene-skills"
description = "The Skill_Engine, Skill_Library, and skill bundles for Cyrene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
